--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,3 +67,4 @@ spring.cloud.service-registry.auto-registration.enabled=false
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+spring.main.allow-circular-references=true
